# RustNN

./: Cargo.toml  LICENSE-APACHE  README.md
doc/: search-index.js
doc/gcc/: fn.compile_library.html  index.html  struct.Config.html
doc/libc/: index.html  stability.html  stability.json
doc/log/: enum.LogLevel.html  enum.LogLevelFilter.html  fn.max_log_level.html  fn.set_logger.html  index.html  macro.debug!.html  macro.error!.html  macro.info!.html  macro.log!.html  macro.log_enabled!.html  macro.trace!.html  macro.warn!.html  sidebar-items.js  struct.LogLocation.html  struct.LogMetadata.html  struct.LogRecord.html  struct.MaxLogLevelFilter.html  struct.SetLoggerError.html  trait.Log.html
doc/nn/: enum.HaltCondition.html  enum.LearningMode.html  enum.UpdateRule.html  index.html  sidebar-items.js  stability.html  stability.json  struct.NN.html  struct.Trainer.html
doc/rand/: fn.random.html  fn.sample.html  fn.thread_rng.html  fn.weak_rng.html  index.html  sidebar-items.js  stability.html  stability.json  struct.AsciiGenerator.html  struct.Closed01.html  struct.Generator.html  struct.Open01.html  struct.OsRng.html  struct.StdRng.html  struct.ThreadRng.html  struct.XorShiftRng.html  trait.Rand.html  trait.Rng.html  trait.SeedableRng.html
doc/rustc_serialize/: stability.html  stability.json  trait.Decodable.html  trait.Decoder.html  trait.DecoderHelpers.html  trait.Encodable.html  trait.Encoder.html  trait.EncoderHelpers.html
doc/threadpool/: index.html  sidebar-items.js  stability.html  stability.json  struct.ScopedPool.html  struct.ThreadPool.html
examples/: selector.rs
src/: lib.rs
tests/: xor.rs
(+904 files in other folders)
